<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>learning_tf2_py</name>
  <version>0.0.0</version>
  <description>Tutorial on TF2 in ROS2</description>
  <maintainer email="shreyas1335@gmail.com">Shreyas Bhat</maintainer>
  <license>Apache-2.0</license>

  <depend>geometry_msgs</depend>
  <depend>tf2_ros_py</depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>turtlesim</exec_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
