<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>py_launch_example</name>
  <version>0.0.0</version>
  <description>ROS2 tutorial on using launch files in a package</description>
  <maintainer email="shreyas1335@gmail.com">Shreyas Bhat</maintainer>
  <license>Apache-2.0</license>

  <depend>ros2launch</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
